# Prueba-Tecnica-Actia-Systems

./: .gitignore  CMakeLists.txt  Makefile  Readme.md  docker-compose.yml  run_docker.sh
docker/: Dockerfile
include/: IModule.hpp  Module1.hpp  Module2.hpp  Module3.hpp  Utils.hpp
src/: Module1.cpp  Module2.cpp  Module3.cpp  Utils.cpp  main.cpp
tests/: main_tests.cpp
